<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_top"
        style="@style/MyTitle"
        android:text="@string/bona_italian"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@+id/tv_spicy"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_spicy"
        style="@style/MyBody"
        android:text="@string/tasty_spicy"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/tv_top"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@+id/et_search"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".07"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".93"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".125"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search"
        android:background="@color/teal_700"
        android:hint="@string/search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tv_spicy"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/food1"
        android:drawableStart="@drawable/ic_search"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/food1"
        android:src="@drawable/steak"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline8"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_name1"
        style="@style/FoodName"
        android:text="@string/steak"
        app:layout_constraintStart_toEndOf="@id/food1"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        app:layout_constraintBottom_toTopOf="@id/food_desc1"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_desc1"
        android:text="@string/great_tasting_steak_i_think"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/food1"
        app:layout_constraintTop_toBottomOf="@id/food_name1"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_btn1"
        android:src="@drawable/ic_assistant"
        style="@style/Star"
        app:layout_constraintStart_toEndOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        app:layout_constraintBottom_toTopOf="@id/price1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price1"
        android:text="20.00"
        style="@style/Price"
        app:layout_constraintStart_toEndOf="@id/food_desc1"
        app:layout_constraintTop_toBottomOf="@id/iv_btn1"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/food2"
        android:src="@drawable/mac_cheese"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/food1"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline8"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_name2"
        style="@style/FoodName"
        android:text="@string/macaroni"
        app:layout_constraintStart_toEndOf="@id/food2"
        app:layout_constraintTop_toBottomOf="@id/food_desc1"
        app:layout_constraintBottom_toTopOf="@id/food_desc2"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_desc2"
        android:text="@string/plenty_of_cheese_of_this_mac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/food2"
        app:layout_constraintTop_toBottomOf="@id/food_name2"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_btn2"
        style="@style/Star"
        android:src="@drawable/ic_assistant"
        app:layout_constraintStart_toEndOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        app:layout_constraintBottom_toTopOf="@id/price2"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price2"
        android:text="@string/_10_00"
        style="@style/Price"
        app:layout_constraintStart_toEndOf="@id/food_desc2"
        app:layout_constraintTop_toBottomOf="@id/iv_btn2"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/food3"
        android:src="@drawable/lasagna"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/food2"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintEnd_toStartOf="@id/guideline8"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_name3"
        style="@style/FoodName"
        android:text="@string/lasagna"
        app:layout_constraintStart_toEndOf="@id/food3"
        app:layout_constraintTop_toBottomOf="@id/food_desc2"
        app:layout_constraintBottom_toTopOf="@id/food_desc3"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_desc3"
        android:text="great tasting lasagna "
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/food3"
        app:layout_constraintTop_toBottomOf="@id/food_name3"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_btn3"
        style="@style/Star"
        android:src="@drawable/ic_assistant"
        app:layout_constraintStart_toEndOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/guideline6"
        app:layout_constraintBottom_toTopOf="@id/price3"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price3"
        android:text="@string/_11_00"
        style="@style/Price"
        app:layout_constraintStart_toEndOf="@id/food_desc3"
        app:layout_constraintTop_toBottomOf="@id/iv_btn3"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/food4"
        android:src="@drawable/special_steak"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/food3"
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        app:layout_constraintEnd_toStartOf="@id/guideline8"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_name4"
        style="@style/FoodName"
        android:text="@string/special_steak"
        app:layout_constraintStart_toEndOf="@id/food4"
        app:layout_constraintTop_toBottomOf="@id/food_desc3"
        app:layout_constraintBottom_toTopOf="@id/food_desc4"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_desc4"
        android:text="@string/great_tasting_steak_i_think"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/food4"
        app:layout_constraintTop_toBottomOf="@id/food_name4"
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        app:layout_constraintEnd_toStartOf="@id/guideline4"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_btn4"
        style="@style/Star"
        android:src="@drawable/ic_assistant"
        app:layout_constraintStart_toEndOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        app:layout_constraintBottom_toTopOf="@id/price4"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price4"
        android:text="@string/_21_00"
        style="@style/Price"
        app:layout_constraintStart_toEndOf="@id/food_desc4"
        app:layout_constraintTop_toBottomOf="@id/iv_btn4"
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/checklist"
        android:text="Check List"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/guideline9"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"/>

</androidx.constraintlayout.widget.ConstraintLayout>